# acuzen_autofill

./: CLAUDE.md  agent.md  index.html  pyproject.toml
Raw_Data/: MedDRA_________100__.csv
artifacts/: http_rendered.html  mock_cases.db
artifacts/reports/: playwright_run.json  run.json
backend/: Dockerfile  README.md  app.py  render.yaml
scripts/: __init__.py  autofill_cases.py  autofill_one_case.py  mock_server.py  run_batch.py  show_cases.py
src/meddra_autofill/: __init__.py  models.py
src/meddra_autofill/execution/: __init__.py  base_worker.py  playwright_worker.py  selenium_worker.py
src/meddra_autofill/ingestion/: __init__.py  excel_ingestion.py  normalizer.py
src/meddra_autofill/mapping/: __init__.py  ui_mapping.py
src/meddra_autofill/observability/: __init__.py  logger.py  reporting.py
src/meddra_autofill/orchestration/: __init__.py  orchestrator.py
src/meddra_autofill/queue/: __init__.py  job_queue.py
src/meddra_autofill/validation/: __init__.py  rules.py
tests/: __init__.py
tests/e2e/: __init__.py  test_autofill_flow.py  test_seq.md
ui/: mock_form.html
